docs/7.0/api/inappmessaging/com.rakuten.tech.mobile.inappmessaging.runtime.data.enums/-event-type/index.md
//[inappmessaging](../../../index.md)/[com.rakuten.tech.mobile.inappmessaging.runtime.data.enums](../index.md)/[EventType](index.md)

# EventType

[androidJvm]\
enum [EventType](index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[EventType](index.md)&gt; 

Local events type according to type ID.

## Parameters

androidJvm

| | |
|---|---|
| typeId | Event type id |

## Entries

| | |
|---|---|
| [CUSTOM](-c-u-s-t-o-m/index.md) | [androidJvm]<br>[CUSTOM](-c-u-s-t-o-m/index.md)(4) |
| [PURCHASE_SUCCESSFUL](-p-u-r-c-h-a-s-e_-s-u-c-c-e-s-s-f-u-l/index.md) | [androidJvm]<br>[PURCHASE_SUCCESSFUL](-p-u-r-c-h-a-s-e_-s-u-c-c-e-s-s-f-u-l/index.md)(3) |
| [LOGIN_SUCCESSFUL](-l-o-g-i-n_-s-u-c-c-e-s-s-f-u-l/index.md) | [androidJvm]<br>[LOGIN_SUCCESSFUL](-l-o-g-i-n_-s-u-c-c-e-s-s-f-u-l/index.md)(2) |
| [APP_START](-a-p-p_-s-t-a-r-t/index.md) | [androidJvm]<br>[APP_START](-a-p-p_-s-t-a-r-t/index.md)(1) |
| [INVALID](-i-n-v-a-l-i-d/index.md) | [androidJvm]<br>[INVALID](-i-n-v-a-l-i-d/index.md)(0) |

## Types

| Name | Summary |
|---|---|
| [Companion](-companion/index.md) | [androidJvm]<br>object [Companion](-companion/index.md) |

## Properties

| Name | Summary |
|---|---|
| [name](../-value-type/-i-n-v-a-l-i-d/index.md#-372974862%2FProperties%2F-93201661) | [androidJvm]<br>val [name](../-value-type/-i-n-v-a-l-i-d/index.md#-372974862%2FProperties%2F-93201661): [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html) |
| [ordinal](../-value-type/-i-n-v-a-l-i-d/index.md#-739389684%2FProperties%2F-93201661) | [androidJvm]<br>val [ordinal](../-value-type/-i-n-v-a-l-i-d/index.md#-739389684%2FProperties%2F-93201661): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html) |
| [typeId](type-id.md) | [androidJvm]<br>val [typeId](type-id.md): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html) |
