docs/7.5/api/inappmessaging/com.rakuten.tech.mobile.inappmessaging.runtime.data.enums/-event-type/index.md
//[inappmessaging](../../../index.md)/[com.rakuten.tech.mobile.inappmessaging.runtime.data.enums](../index.md)/[EventType](index.md)

# EventType

[androidJvm]\
enum [EventType](index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)&lt;[EventType](index.md)&gt; 

Local events type according to type ID.

## Entries

| | |
|---|---|
| [INVALID](-i-n-v-a-l-i-d/index.md) | [androidJvm]<br>[INVALID](-i-n-v-a-l-i-d/index.md) |
| [APP_START](-a-p-p_-s-t-a-r-t/index.md) | [androidJvm]<br>[APP_START](-a-p-p_-s-t-a-r-t/index.md) |
| [LOGIN_SUCCESSFUL](-l-o-g-i-n_-s-u-c-c-e-s-s-f-u-l/index.md) | [androidJvm]<br>[LOGIN_SUCCESSFUL](-l-o-g-i-n_-s-u-c-c-e-s-s-f-u-l/index.md) |
| [PURCHASE_SUCCESSFUL](-p-u-r-c-h-a-s-e_-s-u-c-c-e-s-s-f-u-l/index.md) | [androidJvm]<br>[PURCHASE_SUCCESSFUL](-p-u-r-c-h-a-s-e_-s-u-c-c-e-s-s-f-u-l/index.md) |
| [CUSTOM](-c-u-s-t-o-m/index.md) | [androidJvm]<br>[CUSTOM](-c-u-s-t-o-m/index.md) |

## Types

| Name | Summary |
|---|---|
| [Companion](-companion/index.md) | [androidJvm]<br>object [Companion](-companion/index.md) |

## Functions

| Name | Summary |
|---|---|
| [valueOf](value-of.md) | [androidJvm]<br>fun [valueOf](value-of.md)(value: [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)): [EventType](index.md)<br>Returns the enum constant of this type with the specified name. The string must match exactly an identifier used to declare an enum constant in this type. (Extraneous whitespace characters are not permitted.) |
| [values](values.md) | [androidJvm]<br>fun [values](values.md)(): [Array](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-array/index.html)&lt;[EventType](index.md)&gt;<br>Returns an array containing the constants of this enum type, in the order they're declared. |

## Properties

| Name | Summary |
|---|---|
| [name](../-value-type/-t-i-m-e_-i-n_-m-i-l-l-i/index.md#-372974862%2FProperties%2F-93201661) | [androidJvm]<br>val [name](../-value-type/-t-i-m-e_-i-n_-m-i-l-l-i/index.md#-372974862%2FProperties%2F-93201661): [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html) |
| [ordinal](../-value-type/-t-i-m-e_-i-n_-m-i-l-l-i/index.md#-739389684%2FProperties%2F-93201661) | [androidJvm]<br>val [ordinal](../-value-type/-t-i-m-e_-i-n_-m-i-l-l-i/index.md#-739389684%2FProperties%2F-93201661): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html) |
| [typeId](type-id.md) | [androidJvm]<br>val [typeId](type-id.md): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html)<br>Event type id |
